2011-05-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* url-queue.el: New file.

2011-04-16  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* url-http.el (url-http-wait-for-headers-change-function): Protect
	against malformed headerless responses from servers.

2011-04-02  Chong Yidong  <cyd@stupidchicken.com>

	* url-gw.el (url-open-stream): Use new open-network-stream
	functionality to perform encryption.

2011-04-01  Juanma Barranquero  <lekktu@gmail.com>

	* url-cookie.el (url-cookie-handle-set-cookie):
	Use `dolist' rather than `mapcar'.

2011-03-07  Chong Yidong  <cyd@stupidchicken.com>

	* Version 23.3 released.

2011-02-12  Teodor Zlatanov  <tzz@lifelogs.com>

	* url-parse.el (url-bit-for-url, url-user-for-url)
	(url-password-for-url): Use `auto-source-search' instead of
	`auto-source-user-or-password'.

	* url-auth.el: Autoload `auto-source-search' instead of
	`auto-source-user-or-password'.
	(url-basic-auth, url-digest-auth, url-do-auth-source-search): Use it.

2011-02-03  Lars Ingebrigtsen  <larsi@gnus.org>

	* url-http.el (url-http-wait-for-headers-change-function): Don't
	move point if the callback function has moved changed/killed the
	process buffer.

2010-12-16  Miles Bader  <miles@gnu.org>

	* url-cookie.el: Require 'cl when compiling -- it's necessary for
	defstruct.

2010-12-14  Glenn Morris  <rgm@gnu.org>

	* url-cookie.el: Don't require cl when compiling.
	(url-cookie-clean-up, url-cookie-generate-header-lines): Use dolist.
	(url-cookie-parse-file, url-cookie-store, url-cookie-retrieve)
	(url-cookie-handle-set-cookie): Simplify.

2010-12-13  Chong Yidong  <cyd@stupidchicken.com>

	* url-cookie.el (url-cookie-retrieve): Handle null LOCALPART.
	Suggested by Lennart Borgman (Bug#7543).

2010-11-16  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* url-file.el (url-file-build-filename): Avoid interpreting
	file:/foo:/bar URLs via tramp.

2010-10-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>
