@@ -1,6 +1,8 @@
 2011-05-02  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
 	* url-queue.el: New file.
+	(url-queue-run-queue): Pick the first waiting job, and not the
+	last.
 
 2011-04-16  Lars Magne Ingebrigtsen  <larsi@gnus.org>
 
